--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<section class="todoapp"></section>
 		<footer class="info">
-			<p>Double-click to edit a todo</p>
+			<p>Double-click to edit a todo. Welcome!</p>
 			<p>Created by <a href="http://github.com/petehunt/">petehunt</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
