adds version number

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="react">
 	<head>
 		<meta charset="utf-8">
-		<title>React • TodoMVC</title>
+		<title>React • TodoMVC VERSION 1.0</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 	</head>
