change the version to 1.3

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,8 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 
-    <p>VERSION 1.2</p>
+    <p>VERSION 1.3</p>
+    <p>This is the best version yet!<p>
 
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="node_modules/react/dist/react-with-addons.js"></script>
